--- a/serenade-ransel/index.html
+++ b/serenade-ransel/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav id="navbar">
                 <ul>
-                    <li><a href="../for-andrea-letter/index.html">ForAndrea<3</a></li>
+                    <li><a href="../index.html">ForAndrea<3</a></li>
                 </ul>
             </nav>
         </header>
