--- a/serenade-ransel/index.html
+++ b/serenade-ransel/index.html
@@ -24,7 +24,7 @@
                     <p class="small-subtext">Hahaha i really owe you a lot of covers and requested songs... sensya na puuu. <br /> may perfect time for everything. So here’s this, for you. (｡•̀ᴗ-)✧</p>
                 </div>
                 <div class="button-container">
-                    <button id="home-start" class="main-button">START</button>
+                    <button id="home-start" class="main-button">Okie sige. sayang naman effort mo XD</button>
                 </div>
                 <p class="credits">made just for you | <a href="https://github.com/ranselcrackers" target="_blank" class="credits-link">ranselcrackers:3</a></p>
             </section>
