--- a/pretty-booth/welcome.html
+++ b/pretty-booth/welcome.html
@@ -26,7 +26,7 @@
                             so galingan mo magpakyut <i>(para sa self mo!)</i>
                         </p>
                         <p class="big-subtext">
-                            After the session, <span class="pink-text">click download button,</span> so that <br />
+                            After the session, <span class="pink-text">click the download button,</span> so that <br />
                             you can keep a digi copy of your kakyutan ^_^
                         </p>
                     </div>
